app/stylesheets/index.css
@import 'reset.css';

@font-face {
    font-family: 'Droid Sans';
    font-style: normal;
    font-weight: normal;
    src: local('Droid Sans'), local('DroidSans'),
         url(/fonts/DroidSans.woff) format('woff'),
         url(/fonts/DroidSans.ttf) format('truetype');
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes blink {
    50% { border-color: transparent; }
}

* {
    cursor: default;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

html, body, #load-screen {
    width: 100%;
    height: 100%;
}

html {
    background: black;
    overflow: hidden;
}

body {
    position: relative;
    font-family: 'Droid Sans', sans-serif;
    background: black;
}

#game {
    display: flex;
    flex-direction: column;
    max-width: 80vh;
    height: 100%;
    margin: 0 auto;
    color: black;
}

.button {
    cursor: pointer;
}

.highlighted {
    animation: blink 0.5s step-end infinite;
}

.toolbar {
    flex: auto;
    display: flex;
    align-items: flex-end;
}

.toolbar > * {
    box-sizing: border-box;
}

.player-0.toolbar {
    transform: scale(-1, -1);

    /* to work around <https://stackoverflow.com/questions/41163227/
    cannot-draw-on-part-of-canvas/41164642#41164642> - also on the other side */
    padding-bottom: 1px;
    margin-bottom: -1px;
}

.player-1.toolbar {
    /* to work around <https://stackoverflow.com/questions/41163227/
    cannot-draw-on-part-of-canvas/41164642#41164642> */
    padding-top: 1px;
    margin-top: -1px;
}

.activity, .reset {
    width: 30%;
    padding: 2%;
}

.indicator, .button {
    display: inline-block;
    vertical-align: bottom;
    height: 0;
    border-radius: 50%;
}

.button {
    border: 0.075em solid black;
    width: 25%;
    padding-bottom: 25%;
}

.indicator {
    width: 15%;
    padding-bottom: 15%;
}

.to-chess.button {
    background: no-repeat center/70% url("/images/chess.svg");
}

.to-random.button {
    background: no-repeat center/70% url("/images/random.svg");
}

.indicator {
    margin: 0.075em;
}

.to-random.button {
    margin-right: 10%;
}

.indicator {
    background: black;
}

.score {
    width: 40%;
    text-align: center;
    font-size: 180%;
    font-family: 'Droid Sans'
}

.reset {
    text-align: right;
}

#display {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 100%;
    flex: none;
    background: black;
}

canvas.tiles, canvas.arrow, canvas.rot-anim, canvas.rubber-band {
    position: absolute;
    width: 100%;
    height: 100%;
}

#load-screen {
    position: absolute;
    background: black;
    top: 0;
}

/* container with square aspect ratio */
#load-screen>div {
    position: relative;
    top: calc(50% - 5vmin);
    left: calc(50% - 5vmin);
    width: 10vmin;
    height: 10vmin;
}

#load-screen>div>div.spinner {
    position: absolute;
    top: 25%;
    bottom: 25%;
    left: 45%;
    right: 45%;
    background: white;
}

.spinner {
    -webkit-animation-name: spin;
    -moz-animation-name: spin;
    -ms-animation-name: spin;
    -o-animation-name: spin;
    animation-name: spin;

    -webkit-animation-duration: 0.4s;
    -moz-animation-duration: 0.4s;
    -ms-animation-duration: 0.4s;
    -o-animation-duration: 0.4s;
    animation-duration: 0.4s;

    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -ms-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
    animation-iteration-count: infinite;

    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
    -ms-animation-timing-function: linear;
    -o-animation-timing-function: linear;
    animation-timing-function: linear;
}

canvas.rubber-band {
    cursor: crosshair;
}

